# siriel

./: .gitattributes  .gitignore  LICENSE  README.md  editor-siriel-3.5.sh  run-siriel-3.5-en_US.sh  run-siriel-3.5-sk_SK.sh
siriel-11/: .gitignore  (+3 more)
siriel-bevy/: Cargo.toml
siriel-bevy/assets/: menu-decoration.atlas.ron
siriel-bevy/assets/levels/: CAUL01.ron  CAUL02.ron  CAUL03.ron  CAUL04.ron  CAUL05.ron  CAUL06.ron  CAUL07.ron  CAUL08.ron  CAUL09.ron  CAUL10.ron  CAUL11.ron  CAUL12.ron  FMIS01.ron  FMIS01_fixed.ron  FMIS02.ron  FMIS03.ron  FMIS04.ron  FMIS05.ron  FMIS06.ron  FMIS07.ron  FMIS08.ron  FMIS09.ron  FMIS10.ron  FMIS11.ron  FMIS12.ron  GBALL1.ron  GBALL2.ron  GBALL3.ron  GBALL4.ron  GBALL5.ron
siriel-bevy/assets/sprites/: animations-basic.atlas.ron  objects-basic.atlas.ron  siriel-avatar.atlas.ron  texture-basic.atlas.ron
siriel-bevy/docs/: MCP_SETUP.md  MIE_FORMAT.md
siriel-bevy/src/: atlas.rs  audio.rs  behaviors.rs  components.rs  dat_extractor.rs  level.rs  level_manager.rs  lib.rs  main.rs  menu.rs  mie_parser.rs  resources.rs  systems.rs
siriel-bevy/src/input/: gamepad.rs  gamepad_config.rs  gamepad_plugin.rs  mod.rs
siriel-macroquad/: Cargo.toml  index.html
siriel-macroquad/.cargo/: config.toml
siriel-macroquad/assets/levels/: config.ron  datadisc.ron  fmis01.ron  fmis02.ron  fmis03.ron  fmis04.ron  fmis05.ron  fmis06.ron  fmis07.ron  fmis08.ron  fmis09.ron  fmis10.ron  fmis11.ron  fmis12.ron
siriel-macroquad/assets/sprites/: objects-fmis.ron  siriel-avatar.ron
siriel-macroquad/cmd/: audio_test.rs  convert_mie.rs
siriel-macroquad/src/: lib.rs  main.rs  touch_controls.rs
siriel-macroquad/src/assets/: avatar.rs  collision_mask.rs  mod.rs  objects.rs  tileset.rs
siriel-macroquad/src/audio/: mod.rs
siriel-macroquad/src/core/: camera.rs  constants.rs  gamestate.rs  mod.rs  types.rs
siriel-macroquad/src/effects/: mod.rs  particles.rs
siriel-macroquad/src/entities/: ai.rs  collision.rs  creature.rs  manager.rs  mod.rs  script.rs  types.rs
siriel-macroquad/src/level/: loader.rs  manager.rs  mod.rs  tests.rs  types.rs
siriel-macroquad/src/menu/: decoration.rs  item.rs  mod.rs  navigation.rs  renderer.rs
siriel-macroquad/src/player/: animation.rs  mod.rs  physics.rs
siriel-macroquad/tests/: level_loading.rs
siriel-macroquad/xtask/: Cargo.toml
(+264 files in other folders)
