[package]
name = "siriel-bevy"
version = "0.1.0"
edition = "2021"
default-run = "siriel-bevy"

[[bin]]
name = "extract_sounds"
path = "src/bin/extract_sounds.rs"

[lib]
name = "siriel_bevy"
path = "src/lib.rs"

[dependencies]
bevy = "0.17.2"
bevy_ecs_tilemap = "0.17.0-rc.1"
ron = "0.8.1"
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0.227", features = ["derive"] }
