[package]
name = "siriel-macroquad"
version = "0.1.0"
edition = "2024"
default-run = "siriel"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
macroquad = "0.4.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

[[bin]]
name = "siriel"
path = "src/main.rs"

[[bin]]
name = "convert_mie"
path = "cmd/convert_mie.rs"
