[workspace]
members = [".", "xtask"]
resolver = "2"

[profile.xtask]
inherits = "release"

[package]
name = "siriel-macroquad"
version = "0.1.0"
edition = "2024"
default-run = "siriel"

[lib]
name = "siriel_macroquad"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
macroquad = { version = "0.4.15", features = ["audio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "siriel"
path = "src/main.rs"

[[bin]]
name = "convert_mie"
path = "cmd/convert_mie.rs"
required-features = []

[[bin]]
name = "audio_test"
path = "cmd/audio_test.rs"
required-features = []
